# starlight

./: .gitignore
starlight/: Building.txt  CMakeLists.txt
starlight/docs/: convention.txt
starlight/inet/: CMakeLists.txt
starlight/starlight/: CMakeLists.txt  common.h  glmain.cpp  glmain.h  glrender.cpp  glrender.h  main.cpp  render.h  server.cpp  server.h  simulation.cpp  simulation.h  util.cpp  util.h
starlight/starlight/entities/: entity.cpp  entity.h  ship.h
